--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
      }
 
   </style>
-  <script src="/dist/main.js" defer></script>
+  <script src="./dist/main.js" defer></script>
 </head>
 <body>
   <div id='root'></div>
