--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <script src='dist/main.js' defer></script>
+  <title>Playback</title>
   <style>
     body {
        font-family: impact;
@@ -107,7 +109,6 @@
      }
 
   </style>
-  <script src="./dist/main.js" defer></script>
 </head>
 <body>
   <div id='root'></div>
