--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script src="./dist/main.js" defer></script>
+  <script src="/dist/main.js" defer></script>
   <title>Playback</title>
   <style>
     body {
