--- a/index.html
+++ b/index.html
@@ -1,264 +1,7 @@
 <html>
 <head>
   <script src="https://js.stripe.com/v3/"></script>
-  <style>
-    body {
-       font-family: impact;
-       -webkit-text-stroke-width: .25px;
-       -webkit-text-stroke-color:white;
-       color:black;
-       padding: 2rem;
-       margin:1rem, 0rem, 1rem, 0rem;
-     }
-     h1 {
-       -webkit-text-stroke-width: .1rem;
-       color: white;
-     }
-     h3 {
-       padding-left: 1rem;
-       padding-right: 1rem;
-       font-family: courier;
-     }
-     p {
-       font-family: courier;
-       font-size: 1rem;
-     }
-    nav {
-       display: flex;
-       justify-content: space-around;
-       padding: 1rem;
-     }
-     a {
-       -webkit-text-stroke-width: .25px;
-       -webkit-text-stroke-color: #59c4c6;
-       font-size: 1rem;
-       text-decoration: none;
-       color: #59c4c6;
-     }
-     a:focus {
-       text-decoration: line-through;
-       -webkit-text-stroke-width: 1.5px;
-       color: transparent;
-       font-family: courier;
-       -webkit-text-stroke-color: #f5632f;
-     }
-     a:hover {
-       font-size: 1.25rem;
-       -webkit-text-stroke-color: #59c4c6;
-       -webkit-text-stroke-width: .1rem;
-       color: transparent;
-       transition: 0.25s ease;
-     }
-     #ordersum {
-      display: flex;
-      padding: 2rem;
-      flex-direction: column;
-      background-color: white;
-     }
-     #oflex{
-       display: flex;
-       flex-direction: row;
-       justify-content: flex-end !important;
-       padding: 1rem;
-       margin: 1rem;
-       border: solid 1px black;
-       font-family: courier;
-       background-color: white;
-     }
-
-    #oflex span {
-      font-family: impact;
-      padding-right: .5rem;
-      color: #f5632f;
-    }
-     #flex{
-       display: flex;
-       flex-direction: row;
-       justify-content: space-between;
-       background-color:white;
-       padding: 1rem;
-       margin: 1rem;
-       border-radius: 2rem;
-       border: solid 1px black;
-
-     }
-     #fleximg{
-       display: flex;
-       flex-direction: row;
-       justify-content: space-between;
-       background-color:white;
-       padding-right: 1rem;
-     }
-     #flexq{
-       display: flex;
-       flex-direction: row;
-       background-color:white;
-       justify-content: flex-start;
-     }
-     #cartflex {
-       display: flex;
-       justify-content: space-around;
-     }
-     #flex1 {
-       display: flex;
-       flex-direction: column;
-       justify-content: flex-start;;
-       width: 10rem;
-     }
-     #flex2 {
-       display: flex;
-       flex-direction: column;
-       justify-content: flex-start;
-       padding: 1rem;
-     }
-     #flexprodgrandparent {
-       display: flex;
-       flex-direction: row;
-       flex-wrap: wrap;
-       justify-content: space-around;
-
-     }
-     #flexprodgrandparent>*{
-       display: flex;
-     }
-
-     #flexprodparent img {
-       width: 15rem;
-     }
-     #flexprodparent h1 {
-       font-size:1rem;
-     }
-     #flexprodparent #genre{
-       font-family:courier;
-       text-transform: capitalize;
-       font-weight:700;
-     }
-     #flexprodparent>*{
-       display: flex;
-       flex-direction: column;
-       justify-content: center;
-       margin:3rem;
-       padding:3rem;
-       align-items: center;
-     }
-     #flex3 {
-       display: flex;
-       flex-direction: column;
-       justify-content: flex-start;
-     }
-     li {
-       display: flex;
-       flex-direction: row;
-       justify-content: flex-start;
-       padding: .5rem;
-     }
-
-     ul {
-       padding: 0 !important;
-     }
-
-     input{
-       height: 2rem;
-       font-size: 1rem;
-       margin: .5rem;
-       font-family: courier;
-       border: 1px;
-       border-style: solid;
-     }
-
-     button {
-       height: 2rem;
-       max-width: 5rem;
-       font-size: 1rem;
-       margin: .5rem;
-       font: impact;
-       border: black 1px;
-       border-style: solid;
-       font-family: impact;
-       color: white;
-       -webkit-text-stroke-width: 1px;
-       -webkit-text-stroke-color:black;
-     }
-
-     button:hover {
-       -webkit-text-stroke-color: none !important;
-       size: 1px;
-       font-family: courier;
-       transition: color 0.25 ease;
-       color: #f5632f;
-     }
-     #flex1 button {
-       max-width: 4rem;
-       justify-content: center;
-     }
-
-     #buttons {
-       justify-content: center;
-     }
-     #quantity {
-       font-size: .2rem;
-       font-family: courier;
-       -webkit-text-stroke-width: 0;
-       color: black;
-       height: 1rem;
-       width: 1rem;
-       display: flex;
-       justify-content: space-around;
-     }
-     #genre {
-       text-transform: uppercase;
-       padding-top: 0 !important;
-     }
-     select {
-       font-family: impact;
-       color: #f5632f;
-     }
-     #description {
-       font-family: courier;
-     }
-     .login, .register {
-       display: flex;
-       justify-content: flex-end;
-       font-size: .75rem;
-     }
-    input, button {
-       justify-content: center;
-       align-content: center;
-       font-size: .75rem;
-       box-sizing: border-box;
-       border: 0.075rem solid #ccc;
-       padding: 1.5rem;
-       border-radius: 1.5rem;
-     }
-     .login input, button, .register input, button {
-       display: flex;
-       justify-content: center;
-       height: 1.5rem;
-       width: 20rem;
-       margin: .5rem;
-       font-size: .75rem;
-     }
-     #checkoutform {
-       margin: 5rem;
-       padding: 2rem;
-       border: 1px solid black;
-     }
-     #checkoutform label, button {
-       margin-left: 0 !important;
-     }
-     img {
-       max-width: 10rem;
-       border-radius: 1.5rem;
-     }
-     .rowC {
-       display: flex;
-       flex-direction: row;
-       justify-content: space-between;
-       margin: 3rem;
-       padding-left: 0 !important;
-     }
-
-  </style>
+  <link rel="stylesheet" type="text/css" href="/styles.css">
   <script src="/dist/main.js" defer></script>
 </head>
 <body>
